Fix word wrapping in context/course nav
Fixes: CNVS-34885

Test plan:
- Go to any course in Canvas

- In the left-side content/course menu, open
  Inspector and change the text on the links to
  something that will cause a line break. You should
  now see this behavior:
  https://www.screencast.com/t/4282SzdW

- Note that some browsers support the hyphen rule
  and will insert a hyphen into long strings when they
  break:
  https://www.screencast.com/t/AwpnscdsOjv

Reviewed-on: https://gerrit.instructure.com/102295
Tested-by: Jenkins
QA-Review: Dan Sasaki
Product-Review: Chris Hart <chart@instructure.com>

--- a/app/stylesheets/components/_components.scss
+++ b/app/stylesheets/components/_components.scss
@@ -47,10 +47,11 @@ $ic-brand-course-nav-link--active: $ic-brand-primary;
         text-decoration: none;
         color: $ic-font-color-dark;
         border-radius: $baseBorderRadius;
-        padding: $ic-sp/2 $ic-sp;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
+        padding: ($ic-sp - 4) $ic-sp;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        hyphens: auto;
+        line-height: $ic-label-line-height;
 
         @if $use_high_contrast {
           text-decoration: underline;
